# rsmatrix

./: .gitignore  Cargo.toml  LICENSE  README.md  config.rm
src/: config_parser.rs  main.rs  rmatrix.rs
