[package]
name = "rmatrix"
version = "0.1.0"
authors = ["mov-rax-rbx <73437427+mov-rax-rbx@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "^0.19.0"
rand = "^0.8.0"
notify = "5.0.0-pre.10"
