[package]
name = "rsmatrix"
version = "0.1.0"
authors = ["mov-rax-rbx"]
edition = "2018"
keywords = ["matrix", "rain"]
categories = ["command-line-utilities"]
description = "Terminal `matrix` rain."
readme = "README.md"
repository = "https://github.com/mov-rax-rbx/rsmatrix"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "^0.19.0"
rand = "^0.8.0"
notify = "5.0.0-pre.10"
